--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<title>“โตเกียวสังขยา”</title>
 <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" />
 <link href="./bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
 <script src="./bootstrap/js/bootstrap.min.js"></script>
@@ -51,7 +51,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand" href="#">Logo</a>
+          <a class="navbar-brand" href="#">ขนมไทย-Thai sweets</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -70,24 +70,35 @@
     <div class="container-fluid text-center">    
       <div class="row content">
         <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
+            <p><a href="./index.html">Home_page</a></p>
+            <p><a href="./page1.html">“ขนมโสมนัส”</a></p>
+            <p><a href="./page2.html">“โตเกียวสังขยา สูตรโบราณ”</a></p>
+            <p><a href="./page3.html">“สละลอยแก้ว”</a></p>
+            <p><a href="./page4.html">“โป้งเหน่งลาวาไข่เค็ม”</a></p>
+            <p><a href="./page5.html">"ทองม้วนสดใบเตย"</a></p>
+            <p><a href="./page6.html">“ขนมใส่ไส้ประยุกต์”</a></p>
         </div>
+         <!-- pic -->
+        <div class="col-sm-8">
+          <img class="well text-center" src="./img/tokoy/tokoybanner.png">
+        </div>
+         <!-- pic -->
         <div class="col-sm-8 text-left"> 
           <h1>“โตเกียวสังขยา สูตรโบราณ”</h1>
           <h2>วิธีทำ “โตเกียวสังขยา สูตรโบราณ” เมนูขนมไทย ขนมหน้าโรงเรียนที่คิดถึง</h2>
             <p>ขนมหน้าโรงเรียนวัยเด็กที่ต้องต่อแถวรอซื้ออย่าง”โตเกียวสังขยา สูตรโบราณ”ทำเองได้ง่าย ๆ</p>
             <p>วันนี้แบมจะพาเพื่อน ๆ มาทำเมนูขนมไทยที่ชื่อไม่ไทย อย่างขนมโตเกียว ที่เราจะต้องไปต่อแถวรอซื้อจากคุณลุงคุณป้าหน้าโรงเรียน แต่วันนี้เราจะมาทำเป็นโตเกียวธรรมดาแต่เป็น ”โตเกียวสังขยา สูตรโบราณ” ถ้าพร้อมแล้วเราไปสวมผ้ากันเปื้อนและไปทำกันเลย</p>
           <hr>
+          
             <h2>เวลาที่ใช้ในการทำ</h2>
-            <p>เวลาเตรียม : 10 นาที / เวลาปรุง : 30 นาที / แคลอรี่ : 250 Kcal/เสิร์ฟ </p>
-            <p>สำหรับ 4 ท่าน</p>
-        
-<hr>
+          <div class="well">
+              <p>เวลาเตรียม : 10 นาที / เวลาปรุง : 30 นาที / แคลอรี่ : 250 Kcal/เสิร์ฟ </p>
+              <p>มือนี้สำหรับทาน : 4 ท่าน</p>
+          </div>
+
 <!-- body2 -->
         <div class="col-sm-8 text-left">
-            <2>วัตถุดิบ</2>
+            <h2>วัตถุดิบ</2>
             <h3>ส่วนผสมทำตัวแป้ง</h3>
             <p>1.ไข่ไก่ 4 ฟอง</p>
             <p>2.แป้งสาลีเอนกประสงค์ 195 กรัม</p>
@@ -103,7 +114,8 @@
             <p>5.แป้งข้าวโพด 3 ช้อนโต๊ะ </p>
             <p>6.เกลือป่น 1/2 ช้อนชา</p> 
             <p>7.กลิ่นวานิลา 1 ช้อนโต๊ะ</p>
-<hr>
+            <img class="well text-center" src="./img/tokoy/k.png">  
+
         </div>
 <!-- body2 -->
 <!-- body3 -->
@@ -111,26 +123,53 @@
                 <h2>วิธีทำ</h2>
                 <h3>STEP 1: แป้ง</h3>
                 <p>นำเบคกิ้งโซดาเทใส่ในแป้งเอนกประสงค์ตามด้วยน้ำ คนให้ละลาย ตอกไข่และตามด้วยน้ำตาลทราย คนจนแป้งละลายดีและส่วนผสมเข้ากัน เสร็จแล้วพักไว้</p>
-
+                <div class="container">    
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <img class="well text-center" src="./img/tokoy/1.png">
+                      </div>
+                      <div class="col-sm-4">
+                          <img class="well text-center" src="./img/tokoy/2.png">
+                      </div>
+                    </div>
+                </div>
                 <h3>STEP 2 : ไส้</h3>
                 <p>ตีไข่และน้ำตาลให้น้ำตาลละลายเทนมอุ่นคนจนส่วนผสมเข้ากัน ยกขึ้นตังไฟคนให้ส่วนผสมหนืดและจับเป็นก้อนขึ้น ใส่เนยลงไป คนจนส่วนผสมเข้ากันดีจึงปิดไฟ และทิ้งไว้ให้เย็น</p>
-
+                <div class="container">    
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <img class="well text-center" src="./img/tokoy/3.png">
+                      </div>
+                      <div class="col-sm-4">
+                          <img class="well text-center" src="./img/tokoy/4.png">
+                      </div>
+                    </div>
+                </div>
                 <h3>STEP 3 : โตเกียว</h3>
                 <p>ตักส่วนผสมตัวแป้งและละเลงบนกระทะแบน พอแป้งสุกจึงตักไส้ขนมใส่บนตัวแป้ง ม้วนปิดไส้ แซะออกจากกระทะ จัดใส่จานเสริฟได้ทันที</p>
-
+                <div class="container">    
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <img class="well text-center" src="./img/tokoy/5.png">
+                      </div>
+                      <div class="col-sm-4">
+                          <img class="well text-center" src="./img/tokoy/6.png">
+                      </div>
+                    </div>
+                </div>
             </div>
-<hr>
+
 
 <!-- body3 -->
 <!-- body4 -->
-            <div class="col-sm-8 text-left">
-
+        <div class="container">    
+          <div class="row">
+            <div class="col-sm-8 text-center well">
               <p>เสร็จแล้วสำหรับเมมนูขนมหวาน อย่างเมนู ”โตเกียวสังขยาสูตรโบราณ” ไม่ยากอย่างที่คิดเลยใช่มั้ยคะ เพื่อน ๆ สามารถเปลี่ยนไส้เป็นไส้กรอก หมูสับ หรือ จะเป็นแยมรสผลไม้ต่าง ๆ ก็เริศไม่น้อยเลยค่ะ ถ้าเพื่อน ๆ ทำเมนู ”โตเกียวสังขยาสูตรโบราณ” ก็มาแชร์กันได้นะคะ แบมรออยู่ มาแบ่งกันแบ่งปันกันนะ >< หรือจะดูสูตรเมนูของหวานได้ที่นี่เลยนะคะ </p>
-
             </div>
+          </div>
+        </div>
 <!-- body4 -->
-<hr>
-<br><br>
 <!-- End page --> 
         </div>           
       </div>
