--- a/page4.html
+++ b/page4.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<title>“โป้งเหน่งลาวาไข่เค็ม”</title>
 <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" />
 <link href="./bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
 <script src="./bootstrap/js/bootstrap.min.js"></script>
@@ -51,7 +51,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand" href="#">Logo</a>
+          <a class="navbar-brand" href="#">ขนมไทย-Thai sweets</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -70,9 +70,16 @@
     <div class="container-fluid text-center">    
       <div class="row content">
         <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
+            <p><a href="./index.html">Home_page</a></p>
+            <p><a href="./page1.html">“ขนมโสมนัส”</a></p>
+            <p><a href="./page2.html">“โตเกียวสังขยา สูตรโบราณ”</a></p>
+            <p><a href="./page3.html">“สละลอยแก้ว”</a></p>
+            <p><a href="./page4.html">“โป้งเหน่งลาวาไข่เค็ม”</a></p>
+            <p><a href="./page5.html">"ทองม้วนสดใบเตย"</a></p>
+            <p><a href="./page6.html">“ขนมใส่ไส้ประยุกต์”</a></p>
+        </div>
+        <div class="col-sm-8">
+            <img class="well text-center" src="./img/thumb/tbanner.png">
         </div>
         <div class="col-sm-8 text-left"> 
           <h1>“โป้งเหน่งลาวาไข่เค็ม”</h1>
@@ -80,10 +87,10 @@
             <p>มาย้อนวันวานกับขนมสมัยเด็กกันกับเมนู “โป้งเหน่งลาวาไข่เค็ม” หรือ “ขนมลูกตุ้ม” เมนูขนม ทรงน่ารัก ๆ แป้งนุ่ม กินง่าย ไส้ใข่เค็มทะลัก</p>
           <hr>
             <h2>เวลาที่ใช้ในการทำ</h2>
+            <div class="well">
             <p>เวลาเตรียม : 30 นาที / เวลาปรุง : 50 นาที / แคลอรี่ : 700 Kcal/เสิร์ฟ </p>
-            <p>มือนี้สำหรับทาน</p>
-            <p>สำหรับ 2 ่ทาน เสิร์ฟ </p>
-        
+            <p>มือนี้สำหรับ : 2 ท่าน</p>
+            </div>
 <hr>
 <!-- body2 -->
         <div class="col-sm-8 text-left">
@@ -95,6 +102,7 @@
           <p>ผงฟู 2 ช้อนชา </p>
           <p>น้ำตาลทราย 100 กรัม </p>
           <p>น้ำเปล่า 7 ช้อนโต๊ะ</p>
+          <img class="well text-center" src="./img/thumb/1.png"> 
           <br>
           <h2>ส่วนผสมไส้ลาวาไข่เค็ม</h2>
           <p>ไข่แดงเค็ม 105 กรัม</p> 
@@ -105,6 +113,7 @@
           <p>นมผง 30 กรัม</p> 
           <p>ผงคัสตาร์ด 20 กรัม</p> 
           <p>แป้งข้าวโพด 5 กรัม</p> 
+          <img class="well text-center" src="./img/thumb/2.png"> 
 <hr>
         </div>
 <!-- body2 -->
@@ -117,28 +126,60 @@
               <p>3.นำไปแช่แข็งในช่องแช่แข็ง</p>
               <P>4.เมื่อแข็งได้ที่แล้ว แบ่งไส้ลาวาไข่เค็มเป็นก้อน ๆ</P>
               <p>5.นวลด้วยแป้งแล้วปั้นเป็นก้อนกลม ๆ นำไปแช่แข็งอีกรอบจนแข็งดี</p>
+              <div class="container">    
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <img class="well text-center" src="./img/thumb/3.png">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="well text-center" src="./img/thumb/4.png">
+                    </div>
+                  </div>
+              </div>
 <br>
               <h3>STEP 2 : แบ่งไส้ลาวาไข่เค็มเป็นก้อน และผสมแป้ง</h3>
               <p>6.ตีไข่ไก่กับน้ำตาลจนมีสีขาวขึ้น ผสมกลิ่นวนิลาลงไป</p>
               <p>7.ร่อนแป้ง ผงฟู และเกลือ ลงในกะละมังแยกไว้</p>
               <p>8.นำแป้งที่ร่อนมาผสมกับไข่สลับกับน้ำเปล่า โดยแบ่งผสมสองรอบ ผสมจนเข้ากันดีแล้วนำแป้งไปพัก 15 นาทีก่อนนำมาชุบทอด</p>
+              <div class="container">    
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <img class="well text-center" src="./img/thumb/5.png">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="well text-center" src="./img/thumb/6.png">
+                    </div>
+                  </div>
+              </div>
 <br>
               <h3>STEP 3 : เตรียมทอด</h3>
               <p>9.ตั้งน้ำมันไฟปานกลาง</p>
               <p>10.นำไส้ไข่เค็มลาวาที่แช่แข็งแล้วมาเสียบไม้แล้วนำไปจุ่มแป้งที่ผสมไว้ โดยพยายามให้แป้งคลุมตัวไส้ไข่เค็มให้ทั่ว แล้วจึงนำลงทอด</p>
               <P>11.เมื่อทอดจนขึ้นสีแล้ว นำมาพักให้หายร้อนแล้วจุ่มแป้งอีกหนึ่งครั้ง ก่อนจะนำไปทอดจนมีสีน้ำตาลอ่อน</P>
               <p>พร้อมเสิร์ฟ</p> 
-
+              <div class="container">    
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <img class="well text-center" src="./img/thumb/7.png">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="well text-center" src="./img/thumb/8.png">
+                    </div>
+                  </div>
+              </div>
             </div>
 <hr>
 
 <!-- body3 -->
 <!-- body4 -->
-            <div class="col-sm-8 text-left">
+<div class="container">    
+    <div class="row">
+      <div class="col-sm-8 text-center well">
               <p>เพียงเท่านี้ “โป้งเหน่งลาวาไข่เค็ม” เมนูขนมน่ารัก ๆ ในวัยเด็กของทุกคนก็เสร็จเป็นที่เรียบร้อยแล้วครับ </p>
               <p>โดยปกติแล้วไส้ข้างในโป้งเหน่งจะเป็นไส้กรอก แต่ผมเอามาปรับเปลี่ยนไส้ข้างในนิดหน่อยให้อร่อยมากขึ้น โดยคุณก็สามารถเปลี่ยนเป็นไส้ต่าง ๆ ตามชอบเลยนะครับ ถ้าชื่นชอบยังไงหรืออยากให้ทำเมนูไหน แบบไหนก็บอกกันมาได้ที่นี่นะครับ ขอบคุณครับ </p> 
-                    
             </div>
+          </div>
+        </div>
 <!-- body4 -->
 <hr>
 <br><br>
