--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<title>“สละลอยแก้ว”</title>
 <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" />
 <link href="./bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
 <script src="./bootstrap/js/bootstrap.min.js"></script>
@@ -51,7 +51,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand" href="#">Logo</a>
+          <a class="navbar-brand" href="#">ขนมไทย-Thai sweets</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -70,9 +70,16 @@
     <div class="container-fluid text-center">    
       <div class="row content">
         <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
+            <p><a href="./index.html">Home_page</a></p>
+            <p><a href="./page1.html">“ขนมโสมนัส”</a></p>
+            <p><a href="./page2.html">“โตเกียวสังขยา สูตรโบราณ”</a></p>
+            <p><a href="./page3.html">“สละลอยแก้ว”</a></p>
+            <p><a href="./page4.html">“โป้งเหน่งลาวาไข่เค็ม”</a></p>
+            <p><a href="./page5.html">"ทองม้วนสดใบเตย"</a></p>
+            <p><a href="./page6.html">“ขนมใส่ไส้ประยุกต์”</a></p>
+        </div>
+        <div class="col-sm-8">
+            <img class="well text-center" src="./img/sara/sarabanner.png">
         </div>
         <div class="col-sm-8 text-left"> 
           <h1>“สละลอยแก้ว”</h1>
@@ -81,11 +88,12 @@
             <p>ผลไม้ไทยที่มีรสชาติเปรี้ยว ๆ หวาน ก็คงจะนึกถึงสละกันเลยค่ะ อร่อยตอนทานลำบากตอนแกะ แต่ก็ถือว่าคุ้มมาก ๆ ค่ะ แกะออกมาแล้วมีเท่าไหร่ก็ไม่พอ วันนี้นำสละมาแปรรูปเป็น “สละลอยแก้ว” ทานเย็น ๆ ชื่นใจเหมาะกับอากาศบ้านเรามาก ๆ เลยค่ะ วัตถุดิบก็ไม่ยุ่งยาก ตามมาดูกันเลยค่า</p>
           <hr>
             <h2>เวลาที่ใช้ในการทำ</h2>
-            <p>เวลาเตรียม : 10 นาที / เวลาปรุง : 10 นาที / แคลอรี่ : 150 Kcal/เสิร์ฟ </p>
-            <p>มือนี้สำหรับทาน</p>
-            <p>สำหรับ 4 เสิร์ฟ</p>
+            <div class="well">
+              <p>เวลาเตรียม : 10 นาที / เวลาปรุง : 10 นาที / แคลอรี่ : 150 Kcal/เสิร์ฟ </p>
+              <p>มือนี้สำหรับทาน : 4 ท่าน</p>
+            </div>
         
-<hr>
+
 <!-- body2 -->
         <div class="col-sm-8 text-left">
             <h2>วัตถุดิบ</h2>
@@ -94,7 +102,8 @@
             <p>3.ใบเตย 5 ใบ</p>
             <p>4.น้ำเปล่า 1 ลิตร</p>
             <p>5.เกลือป่น 1/2 ช้อนชา</p>
-<hr>
+            <img class="well text-center" src="./img/sara/sara1.png">  
+
         </div>
 <!-- body2 -->
 <!-- body3 -->
@@ -106,31 +115,51 @@
                 <p>3.กลับด้านเมล็ดสละให้ด้านท้ายผลหันเข้าหาตัวเรา</p>
                 <p>4.หลังจากนั้นเสียบปลายมีดให้เข้าตรงกลาด้านท้ายผลจนถึงเมล็ด แล้วดันปลายมีดไปด้านหน้าเพื่อดันเมล็ดออก</p>
                <p>5.เสร็จแล้วนำสละไปแช่ในน้ำเกลือไว้ค่ะ</p>
+               <div class="container">    
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <img class="well text-center" src="./img/sara/2.png">
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="well text-center" src="./img/sara/3.png">
+                    </div>
+                  </div>
+              </div>
 <br>
                 <h3>STEP 2 : ทำน้ำเชื่อม</h3>
                 <p>6.ตั้งน้ำไฟแรงจนเดือด หลังจากนั้นลดเป็นไฟอ่อนค่ะ ใส่น้ำตาลทรายลงไปเคี่ยวจนน้ำตาลละลายค่ะ</p>
                 <p>7.เมื่อน้ำตาลละดีแล้ว ใส่ใบเตยลงไปค่ะ เพื่อให้มีกลิ่นหอม</p>
                 <p>8.สละที่สะเด็ดน้ำเกลือแล้ว ใส่ลงในหม้อน้ำเชื่อม เติมเกลือป่นลงไปค่ะ คนให้เข้ากันดี รอจนน้ำเดือดอีกครั้งปิดไฟ พักไว้จนเย็นค่ะ</p>
-
+                <div class="container">    
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <img class="well text-center" src="./img/sara/4.png">
+                      </div>
+                      <div class="col-sm-4">
+                          <img class="well text-center" src="./img/sara/5.png">
+                      </div>
+                    </div>
+                </div>
                 <h3>STEP 3 : จัดเสิร์ฟ<h3>
                 <p>9.นำสละลอยแก้ว จัดใส่ชาม เติมด้วยน้ำแข็งเย็น ๆ แค่นี้ก็จัดเสิร์ฟได้เลยค่า</h3>
                 <p>TIPS การเลือกสละ</p>
                 <p>ควรเลือกสละที่สด สละสดจะต้องปอกได้ง่ายค่ะ</p>
                 <p>สละสุมาลี เหมาะกับการทำสละลอยแก้วค่ะ เพราะมีรสชาติอมเปรี้ยวอมหวานนิด ๆ ค่ะ จะได้ตัดกับความหวานของน้ำเชื่อมค่ะ</p>
-
+                <img class="well text-center" src="./img/sara/sara1.png"> 
             </div>
-<hr>
+
 
 <!-- body3 -->
 <!-- body4 -->
-            <div class="col-sm-8 text-left">
-
+          <div class="container">    
+            <div class="row">
+              <div class="col-sm-8 text-center well">
                 <p>ไม่ยุ่งยากเลยค่ะ แถมชื่นใจมาก ๆ กับเมนู “สละลอยแก้ว” หวานเย็นชื่นใจ ใส่น้ำแข้ง ถ้วยเดียวไม่พอเลยค่ะ เพื่อน ๆ ลองทำกันดูนะคะ หรือจะลองทำเป็นสูตรเมนูขนมรังผึ้งก็ดีงามเช่นกันค่า :)</p>
-                
+              </div>
             </div>
+          </div>
 <!-- body4 -->
-<hr>
-<br><br>
+
 <!-- End page --> 
         </div>           
       </div>
