--- a/page5.html
+++ b/page5.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<title>"ทองม้วนสดใบเตย"</title>
 <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" />
 <link href="./bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
 <script src="./bootstrap/js/bootstrap.min.js"></script>
@@ -51,7 +51,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand" href="#">Logo</a>
+          <a class="navbar-brand" href="#">ขนมไทย-Thai sweets</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -70,9 +70,16 @@
     <div class="container-fluid text-center">    
       <div class="row content">
         <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
+            <p><a href="./index.html">Home_page</a></p>
+            <p><a href="./page1.html">“ขนมโสมนัส”</a></p>
+            <p><a href="./page2.html">“โตเกียวสังขยา สูตรโบราณ”</a></p>
+            <p><a href="./page3.html">“สละลอยแก้ว”</a></p>
+            <p><a href="./page4.html">“โป้งเหน่งลาวาไข่เค็ม”</a></p>
+            <p><a href="./page5.html">"ทองม้วนสดใบเตย"</a></p>
+            <p><a href="./page6.html">“ขนมใส่ไส้ประยุกต์”</a></p>
+        </div>
+        <div class="col-sm-8">
+            <img class="well text-center" src="./img/thongmuan/tongmong.png">
         </div>
         <div class="col-sm-8 text-left"> 
           <h1>"ทองม้วนสดใบเตย"</h1>
@@ -81,10 +88,10 @@
             <p>เรามาทำเมนูหวานบ้างดีกว่า! ตามแก้มเข้าครัวมาดู วิธีทำ "ทองม้วนสดใบเตย" เมนูขนมไทย ทำง่ายเพียง 3 ขั้นตอนเท่านั้น เดี๋ยวนี้อาจจะหากินทองม้วนสดอร่อย ๆ ยากสักหน่อย รสชาติไม่เข้มข้นถูกใจ แก้มเลยอยากแจกสูตรนี้ให้เพื่อน ๆ ได้ลองทำดู รับรองต้องติดใจแน่ ๆ ถ้าพร้อมแล้วรีบสวมผ้ากันเปื้อน แล้วมาลุยกันเลยจ้า</p>
           <hr>
             <h2>เวลาที่ใช้ในการทำ</h2>
+            <div class="well">
             <p>เวลาเตรียม : 10 นาที / เวลาปรุง : 30 นาที / แคลอรี่ : 350 Kcal/เสิร์ฟ </p>
-            <p>มือนี้สำหรับทาน</p>
-            <p>สำหรับ 3 ่ทาน เสิร์ฟ </p>
-        
+            <p>มือนี้สำหรับทาน : 3 ท่าน</p>
+        </div>
 <hr>
 <!-- body2 -->
         <div class="col-sm-8 text-left">
@@ -99,6 +106,7 @@
             <p>8. ไข่เป็ด 2 ฟอง</p>            
             <p>9. มะพร้าวอ่อน 1 ลูก </p>           
             <p>10. ใบเตย </p>
+            <img class="well text-center" src="./img/thongmuan/1.png">
 <hr>
         </div>
 <!-- body2 -->
@@ -109,24 +117,58 @@
                 <p>1.ใส่ใบเตยลงในชามผสม ตอกไข่เป็ดลงไป ตามด้วยน้ำตาลปี๊บ กะทิ และน้ำใบเตย ใช้มือขยำให้เข้ากัน จากนั้นนำใบเตยออก </p>               
                 <p>2.ใส่แป้งข้าวเจ้า แป้งมัน และเกลือ คนให้เข้ากัน และกรอง เพื่อให้เนื้อแป้งเนียนขึ้น  </p>              
                 <p>3.ใส่งาดำ และมะพร้าวอ่อนลงไป คนให้เข้ากัน</p>
+                <div class="container">    
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <img class="well text-center" src="./img/thongmuan/2.png">
+                      </div>
+                      <div class="col-sm-4">
+                          <img class="well text-center" src="./img/thongmuan/3.png">
+                      </div>
+                    </div>
+                </div>
                 
 <br>
                 <h2>STEP 2 : ทอด</h2>
                 <p>4.นำกระทะ (ขนาดเส้นผ่าศูนย์กลาง 10 เซนติเมตร) ขึ้นตั้งไฟเบา และรอจนร้อน</p>
                 <p>5.ใส่แป้งที่ผสมไว้ลงไป ⅛ ถ้วย เกลี่ยแป้งให้ทั่วกระทะ พอแป้งเริ่มจับตัวเป็นแผ่น ให้กลับด้าน เพื่อให้สุกเท่ากันทั้งสองด้าน</p>
+                <div class="container">    
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <img class="well text-center" src="./img/thongmuan/4.png">
+                      </div>
+                      <div class="col-sm-4">
+                          <img class="well text-center" src="./img/thongmuan/5.png">
+                      </div>
+                    </div>
+                </div>
 <br>
                 <h2>STEP 3 : จัดเสิร์ฟ</h2>
                 <p>6.พอแป้งสุก ให้ม้วนแป้งเข้าหากัน</p>
                 <p>7.จัดใส่จาน พร้อมเสิร์ฟจ้า</p>
+                <div class="container">    
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <img class="well text-center" src="./img/thongmuan/6.png">
+                      </div>
+                      <div class="col-sm-4">
+                          <img class="well text-center" src="./img/thongmuan/7.png">
+                      </div>
+                    </div>
+                </div>
 
             </div>
 <hr>
 
 <!-- body3 -->
 <!-- body4 -->
-            <div class="col-sm-8 text-left">
+<div class="container">    
+  <div class="row">
+    <div class="col-sm-8 text-center well">
                 <p>เป็นอย่างไรกันบ้างคะ สำหรับเมนู “ทองม้วนสดใบเตย” อร่อยไม่แพ้ฝีมือคุณยายเลยจ้า ยิ่งกินยิ่งมัน หันมาอีกทีหมดจานแล้ว สูตรนี้เพื่อน ๆ สามารถเอาไปทำขายได้เลย รับรองปังแน่นอน เพราะสมัยนี้หากินแบบอร่อยเข้มข้น ยากมากจริง ๆ ค่ะ ใครที่ลองทำแล้วอย่าลืมส่งรูปมาอวดกันบ้างนะ หรือเพื่อนคนไหนอยากลองทำเมนูอื่นเพิ่มเติม อย่างสูตรเมนู “ขนมกล้วย” “ขนมมันม่วง” “ขนมฟักทอง” อร่อยไม่แพ้กันจ้า</p>
+              </div>
             </div>
+          </div>
 <!-- body4 -->
 <hr>
 <br><br>
